@@ -744,8 +744,8 @@ void video_update_core_dmd(struct mame_bitmap *bitmap, const struct rectangle *c
 
   // prepare all brightness & color/palette tables for mappings from internal DMD representation:
   const int shade_16_enabled = ((core_gameData->gen == GEN_SAM) ||
-	  // extended handling also for some GTS3 games (SMB, SMBMW and CBW):
-	  (_strnicmp(Machine->gamedrv->name, "smb", 3) == 0) || (_strnicmp(Machine->gamedrv->name, "cueball", 7) == 0) ||
+	  // extended handling also for some GTS3 games (SMB, SMBMW, CBW and Rescue911):
+	  (_strnicmp(Machine->gamedrv->name, "smb", 3) == 0) || (_strnicmp(Machine->gamedrv->name, "cueball", 7) == 0) || (_strnicmp(Machine->gamedrv->name, "rescu911", 8) == 0) ||
 	  (core_gameData->gen == GEN_ALVG_DMD2));
 
 #ifdef VPINMAME
